--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <p>Hi my name is Dom</p>
+    <p>Hi This is a PWA Website</p>
     <script src="src/index.js"></script>
 </body>
 
